# 2048-game

./: .gitignore  CMakeLists.txt  Makefile  Player_Score.txt  Tiles_Safe_data.txt  main copy.c  main.c  rest.c
GamePlay/: Board.c  Board.h  Movement.c  Movement.h  WinOrLose.c  WinOrLose.h
Pages/: View_GamePlay.c  View_GamePlay.h  View_InputUserName.c  View_InputUserName.h  View_LeaderBoard.c  View_LeaderBoard.h  View_LobbyScreen.c  View_LobbyScreen.h  View_Tutorial.c  View_Tutorial.h
Struct/: Player.c  Player.h  Tile.c  Tile.h
Utilities/: File.c  File.h  Utilities.c  Utilities.h  everything.h
contoh/: File.c  File.h  main.c
modules/Board/: Board.c  Board.h
modules/File/: File.c
modules/GameWinOrLose/: WinOrLose.c  WinOrLose.h
modules/Gameplay/: Gameplay.c  Gameplay.h
modules/Halaman_Lobby/: Halaman_lobby.c  Halaman_lobby.h
modules/Halaman_Tutorial/: HowToPlay.c  HowToPlay.h
modules/Tile/: Tile.c  Tile.h
util/: util.c  util.h
